[gd_scene load_steps=5 format=3 uid="uid://dhs7e0mikoiax"]

[ext_resource type="Script" path="res://script/enemies/intermediate/snatcher/snatcher.gd" id="1_b2fgd"]
[ext_resource type="Texture2D" uid="uid://c3voijdpvps3j" path="res://icon.svg" id="2_cu7ky"]
[ext_resource type="PackedScene" uid="uid://clwjvj5cxto6n" path="res://scene/ui/health_bar.tscn" id="3_5mp36"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6kbee"]

[node name="enemy_snatcher" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 15
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_b2fgd")
metadata/Enemy = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_6kbee")

[node name="Sprite2D" type="Sprite2D" parent="."]
self_modulate = Color(0.539791, 0.0944763, 0.83774, 1)
position = Vector2(3.8147e-06, -3.8147e-06)
scale = Vector2(0.15625, 0.15625)
texture = ExtResource("2_cu7ky")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 2.0
target_desired_distance = 0.1
avoidance_enabled = true
debug_enabled = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="health_bar" parent="." instance=ExtResource("3_5mp36")]
offset_left = -21.0
offset_top = -18.0
offset_right = 20.0
offset_bottom = -13.0

[node name="Cooldown" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Cooldown" to="." method="_on_cooldown_timeout"]
